增加微信分享接口

--- a/pom.xml
+++ b/pom.xml
@@ -178,6 +178,12 @@
             <version>${aliyun.sdk.oss.version}</version>
         </dependency>
         <!-- oss相关依赖 结束 -->
+        <!-- 微信mp -->
+        <dependency>
+            <groupId>com.github.binarywang</groupId>
+            <artifactId>weixin-java-mp</artifactId>
+            <version>3.3.0</version>
+        </dependency>
 
     </dependencies>
 
