--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,10 @@ app:
   # 开发dev 测试test  生产 master
   env: dev
 
+wechat:
+  mpAppId: wx17b1cc5b8a29ad16
+  mpAppSecret: e92bbe7fbe903ca60718a576fd73007e
+
 # 对象存储配置
 obs:
   accessKeyId: ROFOCBBENS1RWYEE0AEA
