数据库更新

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,7 +41,6 @@ spring:
     time-zone: GMT+8
   redis:
     database: 0
-    #    host: 198.19.56.204
     host: localhost
     port: 6379
     password:
@@ -55,7 +54,8 @@ spring:
       force: true
   datasource:
     name: datasource
-    url: jdbc:mysql://122.112.159.26:3306/yuanqufuwu?serverTimezone=GMT%2b8
+    url: jdbc:mysql://122.112.159.26:3306/park?zeroDateTimeBehavior=CONVERT_TO_NULL&useUnicode=true&characterEncoding=UTF8&serverTimezone=GMT%2b8
+#    url: jdbc:mysql://122.112.159.26:3306/yuanqufuwu?serverTimezone=GMT%2b8
     username: root
     password: "!Q1q1q1q"
     type: com.alibaba.druid.pool.DruidDataSource
