固定微信config参数url

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,7 @@ app:
 wechat:
   mpAppId: wx17b1cc5b8a29ad16
   mpAppSecret: e92bbe7fbe903ca60718a576fd73007e
+  url: http://www.yuanfudashi.com/
 
 # 对象存储配置
 obs:
